infra/ingress/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:

 # - hosts:
 #   - express.mongo.com
  #  - db.mongo.com
   # secretName: mongo-tls-secret
  rules:
  - host: express.mongo.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
